--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Epitaph Site</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>bosta</h1>
+    <h1 class="intro">bosta</h1>
 </body>
 
 
