added social media

--- a/index.html
+++ b/index.html
@@ -2,17 +2,41 @@
 <html lang="pt_br">
 
 <head>
+    <title>Eduardo C. Higuti</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>Epitaph Site</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="assets/github.png">
 </head>
 
 <body>
-    <h1 class="intro">bosta</h1>
+    <header id="header">
+        <h1 class="intro">Eduardo C. Higuti</h1>
+
+        <nav id="menu">
+            <a href="https://github.com/eduardohiguti"> 
+                <img src="assets/github.png" width="30">
+            </a>
+            <a href="https://www.linkedin.com/in/eduardo-higuti/">
+                <img src="assets/linkedin.png" width="30">
+            </a>
+            <a href="mailto:eduardohiguti@outlook.com">
+                <img src="assets/email.png" width="30">
+            </a>
+        </nav>
+    </header>
+    
+    <main>
+        <div class="projetos">
+            <h1>Projetinhos pai</h1>
+        </div>
+    </main>
+
+    <footer>
+            <p class="footer">
+                © Eduardo C. Higuti · 
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
+            </p>
+    </footer>
 </body>
-
-
-
-
 </html>
