--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt_br">
 
+<!-- ODEIO HTML AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
+
 <head>
     <title>Eduardo C. Higuti</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="assets/github.png">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 </head>
 
 <body>
+<!-- IT JUST WORKS!! -->
     <header id="header">
-        <h1 class="intro">Eduardo C. Higuti</h1>
-
-        <nav id="menu">
-            <a href="https://github.com/eduardohiguti"> 
-                <img src="assets/github.png" width="30">
-            </a>
-            <a href="https://www.linkedin.com/in/eduardo-higuti/">
-                <img src="assets/linkedin.png" width="30">
-            </a>
-            <a href="mailto:eduardohiguti@outlook.com">
-                <img src="assets/email.png" width="30">
-            </a>
-        </nav>
+        <ul>
+            <li style="float:left">
+                <p class="intro">Eduardo C. Higuti</p>
+            </li>
+            <li>
+                <a href="https://github.com/eduardohiguti"> 
+                    <img src="assets/github.png" width="30">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/eduardo-higuti/">
+                    <img src="assets/linkedin.png" width="30">
+                </a>
+            </li>
+        </ul>
     </header>
     
     <main>
