--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </li>
             <li>
                 <a href="https://github.com/eduardohiguti"> 
-                    <img src="assets/github.png" width="30">
+                    <img src="assets/github.png" width="28">
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/eduardo-higuti/">
-                    <img src="assets/linkedin.png" width="30">
+                    <img src="assets/linkedin.png" width="28">
                 </a>
             </li>
         </ul>
@@ -39,8 +39,11 @@
 
     <footer>
             <p class="footer">
-                © Eduardo C. Higuti · 
-                <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
+                © Eduardo C. Higuti 2024 · 
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>
+            </p>
+            <p class="footer">
+                <a href="https://github.com/eduardohiguti/ehiguti.xyz">GitHub Repository</a>
             </p>
     </footer>
 </body>
